# Otto

./: .gitignore  .gitmodules  Auto.jucer  CMakeLists.txt  Otto.jucer  README.md  compile_commands.json
.clangd/index/: AppConfig.h.9F8F1B280A9D3122.idx  BufferStore.cpp.4E2BC270D94E30E6.idx  BufferStore.h.E37DD23912956533.idx  Constants.h.56DD6A89BA6B12FE.idx  CustomLookAndFeel.h.0C1FCD12AAD35705.idx  EnvelopeFollower.cpp.B86AD2F896CFE2B9.idx  EnvelopeFollower.h.57B000D5518DC5E0.idx  GraphDisplay.cpp.90621C071242437C.idx  GraphDisplay.h.2AA6C44C40330573.idx  Helpers.h.C1D515936BEF5E4C.idx  JuceHeader.h.D812C3D1C3C6B1D0.idx  LabeledSlider.cpp.1F59EA66F3B244D6.idx  LabeledSlider.h.1365EC3185AFF710.idx  LevelValueDisplay.h.CFB2CEEDDF79CC52.idx  Meter.cpp.55E8853C33703C6E.idx  Meter.h.579758B2C62F5F80.idx  MeterDisplay.cpp.C42C2EDC176BEABB.idx  MeterDisplay.h.86A8A3BF9F3EC382.idx  Mixer.cpp.CBBC9DA602FEA5B0.idx  Mixer.h.C778A9ECD79F3369.idx  PluginEditor.cpp.879150D1E661DF77.idx  PluginEditor.h.E2E6077DFF5A33B4.idx  PluginProcessor.cpp.F8F700F6A50D4EB9.idx  PluginProcessor.h.3FCF71F49D413A0E.idx  RampSmoother.h.485D30D124345FF2.idx  RingBuffer.h.5A526685541EF583.idx  include_juce_audio_basics.cpp.E7A9D585A7313F59.idx  include_juce_audio_devices.cpp.4846CA1B012B8D1E.idx  include_juce_audio_formats.cpp.D682C73FF5A6CA01.idx  include_juce_audio_plugin_client_utils.cpp.C6B2AA07560F2954.idx  include_juce_audio_processors.cpp.7C5E76B064E99A7D.idx  include_juce_audio_utils.cpp.CFB4F7F48FEF8D56.idx  include_juce_core.cpp.8C154715EC7F8448.idx  include_juce_cryptography.cpp.07DCD545E8BD359B.idx  include_juce_data_structures.cpp.6DCE14A8438E9BC0.idx  include_juce_dsp.cpp.52A750A2F20C3BFF.idx  include_juce_events.cpp.29ED8E46E3FFC399.idx  include_juce_graphics.cpp.3B2C93AE14F884C1.idx  include_juce_gui_basics.cpp.D0C1953223B6057B.idx  include_juce_gui_extra.cpp.88A050EE191F50FB.idx  (+1 more)
Builds/VisualStudio2019/: Auto.sln  Auto_AAX.vcxproj  Auto_AAX.vcxproj.filters  Auto_SharedCode.vcxproj  Auto_SharedCode.vcxproj.filters  Auto_VST3.vcxproj  (+3 more)
JuceLibraryCode/: AppConfig.h  JuceHeader.h  JucePluginDefines.h
Source/: BufferStore.cpp  BufferStore.h  Constants.h  CustomLookAndFeel.h  DisplayData.h  DropDownMenu.cpp  DropDownMenu.h  EnvelopeFollower.cpp  EnvelopeFollower.h  FilterFollower.cpp  FilterFollower.h  Graph.cpp  Graph.h  GraphDisplay.cpp  GraphDisplay.h  Helpers.h  LabeledSlider.cpp  LabeledSlider.h  LevelValue.cpp  LevelValue.h  LevelValueDisplay.h  Meter.cpp  Meter.h  MeterDisplay.cpp  MeterDisplay.h  Mixer.cpp  Mixer.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  RampSmoother.h  RingBuffer.cpp  RingBuffer.h  StackFIFO.cpp  StackFIFO.h  TitleBar.cpp  ValueSmoother.h  parameter_constants.h
libs/JUCECC/: CMakeLists.txt
libs/JUCECC/Processors/: DisplayData.h  EnvelopeFollower.cpp  EnvelopeFollower.h  Graph.cpp  Graph.h  Meter.cpp  Mixer.cpp  Mixer.h
libs/JUCECC/UIComponents/: GraphDisplay.h  LabeledSlider.h
libs/JUCECC/Utils/: CustomLookAndFeel.h
(+12 files in other folders)
